correction index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a simple Command Line Program for Todo List",
   "main": "index.js",
   "type": "module",
-  "bin": "index",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
